<resources>
    <string name="app_name">Forum</string>
    <string name="b_connexion">Login</string>
    <string name="b_inscritpion">Register</string>
    <string name="et_mdp_">Password</string>
    <string name="et_pseudo_">pseudo</string>
    <string name="et_mdp_2">Check password</string>
    <string name="et_genre_man">Man</string>
    <string name="et_genre_woman">Woman</string>
    <string name="b_back">Back</string>
    <string name="addSubject">Add a subject</string>
    <string name="Logout">Logout</string>
    <string name="Error_404">Page not found</string>
    <string name="Error">"Error 500 \"serveur\" "</string>
    <string name="accountNo">account no found</string>
    <string name="accountStill">account already exist</string>
    <string name="remplir_champs">fill all fields</string>
    <string name="msg">Enter your message</string>
    <string name="ErrorRCP">Error from RCP PHP</string>
    <string name="ErrorConnect">Error data connexion</string>
    <string name="ErrorTimeRCP">Error timing response</string>
    <string name="TitleRegis">Register Page</string>
    <string name="TonwNo">No town found</string>
    <string name="GenderNo">No gender selected</string>
    <string name="PseudoNo">No pseudo entered</string>
    <string name="PseudoLn">The length of pseudo must contain 9 letters</string>
    <string name="RegexPseudo">Pseudo isn t correctly</string>
    <string name="PswNo">No password enterd</string>
    <string name="PswLn">The length of password must contain 10 letters</string>
    <string name="PswDiff">Passwords are differents</string>
    <string name="TownFree">No town selected</string>
    <string name="RegexPsw">The password doesn t respect the norms</string>
    <string name="MenuPage">Menu Forum Discussion</string>
    <string name="SubjectNo">No Subject</string>
    <string name="Title_accueil">Home page</string>
    <string name="TitleSubject">Page to add subjects</string>
    <string name="Btn_oki">Confirm</string>
    <string name="Tv_choose_town">Choose a town</string>
    <string name="Title_choose_town">Page to select a town</string>
    <string name="ElementNo">No Element found</string>
    <string name="Annul">Cancel</string>
    <string name="Registered">Registered correctly done</string>
    <string name="TownNo">select a town</string>
    <string name="Btn_add_mss">Add your message</string>
    <string name="TitleAddMsg">Messages Page</string>
    <string name="Txt_choose_subject">Choose subject</string>
    <string name="Title_choose_subjet">Choose a subject</string>
    <string name="MsgNo">Message invalide it must be contain 2 letters</string>
    <string name="SujectExis">Existing subject</string>
    <string name="SubjLn">"it must be contain 10 letters "</string>
    <string name="ErrorSql">Eror from sql</string>
    <string name="CheckPsw">Check the second password</string>
    <string name="Townselect">Choose a country in the list</string>
    <string name="SubjOki">Subject correctly added</string>
</resources>