<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/forumColor"
    android:padding="30sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/discuss" />

            <EditText
                android:id="@+id/et_pseudo_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_pseudo_"
                android:inputType="text"
                android:padding="30dp" />

            <EditText
                android:id="@+id/et_mdp_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_mdp_"
                android:inputType="textPassword"
                android:padding="30dp" />

            <Button
                android:id="@+id/but_connexion"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:text="@string/b_connexion" />

            <Button
                android:id="@+id/but_inscription_m"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/b_inscritpion"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>